--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <script src="js/scripts.js"></script>
-  <p>TESTING</p>
+  <h1>TESTING</h1>
+  <p>This is a test. Do not be alarmed.</p>
 </body>
 </html>
